--- a/index.html
+++ b/index.html
@@ -8,6 +8,32 @@
   </head>
   <body>
     <div id="root"></div>
+    <script>
+  //<![CDATA[
+  document.oncontextmenu = function() {
+  return false;
+  };
+  document.onkeydown = function(e) {
+  if (e.keyCode == 123) {
+  return false;
+  }
+  if (e.ctrlKey && e.shiftKey && e.keyCode == 'I'.charCodeAt(0)) {
+  return false;
+  }
+  if (e.ctrlKey && e.shiftKey && e.keyCode == 'J'.charCodeAt(0)) {
+  return false;
+  }
+  if (e.ctrlKey && e.keyCode == 'U'.charCodeAt(0)) {
+  return false;
+  }
+  if (e.ctrlKey && e.shiftKey && e.keyCode == 'C'.charCodeAt(0)) {
+  return false;
+  }
+  if (e.ctrlKey && e.keyCode == 'C'.charCodeAt(0)) {
+  return false;
+  }}
+  </script>
+
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
